--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TEMPLATE HTML-CSS-JS</title>
+        <title>Carosello Mono Array</title>
 
 
         <!-- CSS -->
@@ -18,7 +18,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+        <div class="my-carousel-container text-center">
+            <img src="./img/01.webp" alt="img-01" id="img-01">
+            <img src="./img/02.webp" alt="img-2" id="img-02">
+            <img src="./img/03.webp" alt="img-03" id="img-03">
+            <img src="./img/04.webp" alt="img-04"  id="img-04">
+            <img src="./img/05.webp" alt="img-05" id="img-05">
+        </div>
 
         <!-- JAVASCRIPT -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
