--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="my-carousel-container text-center">
-            <img src="./img/01.webp" alt="img-01" id="img-01">
+        <div class="my-carousel-container text-center" id="my-carousel-container">
+            <!-- <img src="./img/01.webp" alt="img-01" id="img-01">
             <img src="./img/02.webp" alt="img-2" id="img-02">
             <img src="./img/03.webp" alt="img-03" id="img-03">
             <img src="./img/04.webp" alt="img-04"  id="img-04">
-            <img src="./img/05.webp" alt="img-05" id="img-05">
+            <img src="./img/05.webp" alt="img-05" id="img-05"> -->
         </div>
 
         <!-- JAVASCRIPT -->
@@ -31,3 +31,7 @@
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
+
+<!-- <div class="active">
+    <img src="${ImgArray[contatore]}" alt="">
+</div> -->
