--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="my-carousel-container text-center" id="my-carousel-container">
-            <!-- <img src="./img/01.webp" alt="img-01" id="img-01">
-            <img src="./img/02.webp" alt="img-2" id="img-02">
-            <img src="./img/03.webp" alt="img-03" id="img-03">
-            <img src="./img/04.webp" alt="img-04"  id="img-04">
-            <img src="./img/05.webp" alt="img-05" id="img-05"> -->
-        </div>
+        <main class="m-5">
+            <button class="btn" id="previous-button">PRIMA</button>
+    
+            <!-- container immagini -->
+            <div class="my-carousel-container text-center" id="my-carousel-container">
+            </div>
+    
+            <button class="btn" id="next-button">DOPO</button>
+        </main>
 
         <!-- JAVASCRIPT -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -32,6 +34,3 @@
     </body>
 </html>
 
-<!-- <div class="active">
-    <img src="${ImgArray[contatore]}" alt="">
-</div> -->
